tests/typechecker/should_fail/parser_let_channel_defined.csp
P = let
		channel c : {0..1}
	within 2
